fixed z-index

--- a/src/components/znkExercise/scss/_znk-exercise-drv-desktop.scss
+++ b/src/components/znkExercise/scss/_znk-exercise-drv-desktop.scss
@@ -67,7 +67,7 @@ znk-exercise.desktop {
         }
 
         .done-btn-wrap {
-            z-index: 2;
+            z-index: 3;
             width: 160px;
             position: absolute;
             right: 12px;
